Colaboratory를 통해 생성됨

--- a/matrix2.ipynb
+++ b/matrix2.ipynb
@@ -6,7 +6,7 @@
       "name": "matrix2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsVLyaKkfQ/7GxtL+kCMxS",
+      "authorship_tag": "ABX9TyOokPiL21F9gaNVjLoJEmK9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,23 +84,23 @@
         "tensor2=tf.stack([mat1,mat2,mat3])\n",
         "print(\"rank: \",tf.rank(tensor2))\n",
         "\n",
-        "print(\"tensorl: \",tensor2)\n"
+        "print(\"tensor2: \",tensor2)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a8r6dd6-H5jT",
-        "outputId": "d6ff2b51-e043-4bae-8913-2b02762c6186"
+        "outputId": "4ac8902e-6a5d-4733-af1f-a9a5b5fa2747"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "rank:  tf.Tensor(3, shape=(), dtype=int32)\n",
-            "tensorl:  tf.Tensor(\n",
+            "tensor2:  tf.Tensor(\n",
             "[[[ 1  2  3  4]\n",
             "  [ 5  6  7  8]]\n",
             "\n",
